<resources>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="playStoreLink">https://play.google.com/store/apps/developer?id=JK+TechPlus</string>
    <string name="channel_name">GK Quiz(General Knowledge)</string>
    <string name="baseURL">https://welcomeappsads.herokuapp.com/</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>

    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_api_unavailable_text"><g id="app_name">%1$s</g> requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text"><g id="app_name">%1$s</g>" won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone"><g id="app_name">%1$s</g>" won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet"><g id="app_name">%1$s</g>" won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue"><g id="app_name">%1$s</g> is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text"><g id="app_name">%1$s</g> relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text"><g id="app_name">%1$s</g>" won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text"><g id="app_name">%1$s</g>" won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="ApplicationName">Application Name</string>
    <string name="Back">Back</string>
    <string name="Buy">Buy</string>
    <string name="ChangeAccount">Sign Out</string>

    <string name="Email">Email</string>

    <string name="Name">Name</string>
    <string name="Next">Next</string>

    <string name="UpdateBtn">UPDATE</string>
    <string name="UpdateNegativeBtn">REMIND ME LATER</string>
    <string name="UpdateTitle">Update Available</string>
    <string name="accept">Accept</string>
    <string name="action_settings">Settings</string>


    <string name="app_name">GK Quiz (General Knowlegde)</string>

    <string name="startApp_id">210322975</string>
    <string name="close">close</string>
    <string name="correct_ans">Correct Answers</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="end">Points - Would You Like To Start a New Game?</string>
    <string name="exchange_button">new question</string>
    <string name="fiftyfifty_button">50 50</string>
    <string name="hello_world">Hello world!</string>
    <string name="high_score">Your Best Score</string>
    <string name="hyperlink">session/forgot_password</string>
    <string name="info">Play With All Kinds</string>
    <string name="invitation_cta">Install!</string>*
    <string name="invitation_custom_image" />
    <string name="level">Level</string>
    <string name="md_back_label">Back</string>
    <string name="md_cancel_label">Cancel</string>
    <string name="md_done_label">Done</string>

    <string name="points">Points</string>

    <string name="ques_num">Question No:</string>

    <string name="score">score</string>

    <string name="start">Your Score</string>
    <string name="store_picture_title">Save image</string>

    <string name="topics"><u>Topics</u></string>
    <string name="total_ques">Total Questions</string>
    <string name="twoshots_button">2 turns</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="wrong_ans">Wrong Questions</string>
    <string name="title_activity_view_category">ViewCategory</string>

    <string name="app_id">ca-app-pub-3095596591088533~2492469611</string>
    <string name="banner_id">ca-app-pub-3095596591088533/3816680641</string>
    <string name="inter_id">ca-app-pub-3095596591088533/4938190624</string>

</resources>
